# CakeShop

./: .gitignore  README.md  pyproject.toml
CakeShop/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
src/: admin.py  models.py  urls.py  views.py
src/migrations/: 0001_initial.py
templates/: index.html  lk-order.html  lk.html
